typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList13.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList13.ts:2:10
  |
2 |     new (public x);
  |          ^^^^^^

